# bertBurner

./: .gitignore  README.md  burner.config  run_burner.sh  setup_common.sh  setup_libtorch_linux.sh  setup_libtorch_macos.sh
bertCpp/: CMakeLists-linux.txt  CMakeLists.txt  EvalJNI.h  Model-BERT.cpp  Model-BERT.hpp  ModelIO.hpp
bertPython/: load_model.py
bertScala/: build.sbt
bertScala/src/main/scala/: EvalJNI.scala  ManageRequest.scala  RunEval.scala  RunServer.scala
bertScala/src/main/scala/burner/: EvalJNI.scala
docker/: Dockerfile-bertBurner
